--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@react-spring/web": "^9.7.5",
     "aos": "^2.3.4",
+    "lucide": "^0.501.0",
     "motion": "^12.7.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
