--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mavitrine",
-  "homepage": "https://Sowmaki.github.io/LaCodeuseCreactive",
+  "homepage": "https://Sowmaki.github.io/LaCodeuseCreative",
   "private": true,
   "version": "0.0.0",
   "type": "module",
