:art: style: update homepage in package.json and change base path in vite.config.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mavitrine",
-  "homepage": "https://sowmaki.github.io/LaCodeuseCreative",
+  "homepage": ".",
   "private": true,
   "version": "0.0.0",
   "type": "module",
